# VO-SE-Pro

./: CMakeLists.txt  README.md  api_interface.c  audio_output.py  index.html  indexのコピー2 2.html  indexのコピー2.html  libvo_se.dylib  main.py  main_window.py  midi_manager.py  pyrightconfig.json  requirements.txt  synthesizer_core.c  text_analyzer.py  timeline_widget.py  vo_se_engine.c  voice_manager.py  vose_core.dylib  vose_pro.spec  widgets.py  あ.md
.github/workflows/: build-engine.yml  release.yml
assets/: icon.icns
images/: eslmonolith
include/: vo_se_engine .h  vose_core.h  vose_core_internal.h
modules/:  ai_manager.py   vo_se_engine.py
modules/ data/: data_models.py  midi_manager.py  text_analyzer.py
modules/ gui/: main_window.py
modules/ai/:  ai_manager.py  ai_manager.py
modules/audio/:  audio_output.py   vo_se_engine.py  audio_output.py  vo_se_engine.py  voice_manager.py
modules/backend/: audio_player.py  intonation.py
modules/data/: data_models.py  licensing.py  midi_manager.py
modules/ffi/: __init__.py  vose_types.py
modules/gui/: app_main.py  aural_engine.py  core_manager.py  dynamics_ai.py  dynamics_engine.py  engine_bridge.py  engine_connector.py  graph_editor_widget.py  keyboard_sidebar_widget.py  main_window.py  timeline_widget.py  widgets.py
modules/talk/: talk_manager.py
modules/tools/: pack_voice.py
plans/: user_evaluation_plan.md
src/:  vo_se_engine.c  vo_se_engine 2.h  vo_se_engine.c  vose_core.cpp  vose_core.h  vose_streaming_final.cpp
tests/: ci_test_render.py  test_ci_render.py  test_runtime_requirements.py
(+3 files in other folders)
